--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/ioredis": "^5.0.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.8.7",
     "concurrently": "^9.0.1",
-    "nodemon": "^3.1.7"
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.7",
+    "ts-jest": "^29.2.5"
   }
 }
